# Reinforcement-Learning-Retail-Project

./: .gitignore  README.md  dashboard.py  pyproject.toml
agents/: base_agent.py  opponent_encoder.py  registry.py
agents/a2c/: a2c_agent.py
agents/baselines/: baseline_agents.py  reward_functions.py
agents/dqn/: dqn_agent.py
agents/ppo/: ppo_agent.py
agents/qtable/: qtable_agent.py
config/: agent_config.yaml  env_config.yaml
environment/: demand_model.py  inventory.py  product_catalog.py  promotions.py  retail_env.py  supply_chain.py
notebooks/: 01_eda_instacart.ipynb  02_env_validation.ipynb  03_training.ipynb  03_training_testing.ipynb
results/: agent_meta.json  episode_summaries.json  training_results.csv  training_results.pkl
results/ablations/: ablation_summary.csv
results/ablations/all_a2c_same/: agent_meta.json  episode_summaries.json  run_config.json  training_results.csv
results/ablations/all_dqn_same/: agent_meta.json  episode_summaries.json  run_config.json  training_results.csv
results/ablations/all_dqn_varied/: agent_meta.json  run_config.json  training_results.csv
results/ablations/all_ppo_same/: agent_meta.json  episode_summaries.json  run_config.json  training_results.csv
results/ablations/baseline/: run_config.json  (+1 more)
retailrl/: make_ablation_plots.py  run_ablations.py  train.py
tests/: test_baseline_agents.py  test_demand_model.py  test_inventory.py  test_product_catalog.py  test_promotions.py  test_retail_env.py  test_reward_functions.py  test_supply_chain.py
utils/: config_loader.py  logger.py  trainer.py
(+3 files in other folders)
